# usdc-weth-scrapper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: server.py
app/core/: config.py  constant.py  dependencies.py
app/core/binance_spot_api/: client.py  model.py
app/core/etherscan_http_client/: client.py  model.py
app/core/fund_allocator/: client.py  model.py
app/core/helper/: client.py
app/core/log/: __init__.py  logger.py  queue_listener.py
app/core/scrapper_service/: abis.py  client.py  model.py
app/routes/: api.py  health_check.py  utils.py
app/routes/deposit_route/: controller.py  handler.py  models.py  response_config.py
app/routes/scrapper_route/: controller.py  models.py
app/storage/: connection.py  models.py
app/storage/token_pair_pools_repositories/: client.py  model.py
app/storage/transactions_to_from_pools_repositories/: client.py  model.py
app/utils/http_client/: base_class.py  client.py
configs/: dev.ini  prd.ini  secret.ini.example  stg.ini
databases/postgresql/: 0000-create-extension.sql  0000-create-pool-tables.sql  0001-create-slack-message-information-table.sql  0002-create-slack-message_embedding-table.sql  0003-create-queries-to-slack-embeddings-records-table.sql  0004-create-queries-to-slack-information-mapping-table.sql
scripts/: db.json  db.py  db.sh  gunicorn_conf.py
tests/core/fund_allocator/: fund_allocator_test_cases.py  test_fund_allocator_client.py
tests/core/helper/: test_helper_client.py
tests/core/scrapper_service/: test_scrapper_service_client.py
tests/routes/: test_health_check.py
tests/routes/deposit_route/: deposit_plan_test_cases.py  test_deposit_plan.py
